bad/bin_op_eq_string_array.example_compiler_output
ERROR
[1mbad/bin_op_eq_string_array.lat:3:5: [1;31merror: [0;1moperator == cannot compare values of types `string` and `int[]` because values are not convertible to either of the two types[m
	"" == new int[3];
	   [1;32m^[m
